--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -11,7 +11,7 @@
     {% endblock %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel='stylesheet' href="{% static 'style.css' %}">
+    <link rel='stylesheet' href="{% static 'styl.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm ">         
@@ -42,7 +42,7 @@
             </nav>
         </div>
         {% endif %}
-        <div class="container border">
+        <div class="container col-10 border">
             {% block content %}
             {% endblock %}
         </div>
