--- a/mails/templates/mails/detail.html
+++ b/mails/templates/mails/detail.html
@@ -8,14 +8,16 @@
         <div class="row">
             <div class="row col-12">
                 <div class="col-9">
-                    <h4 class="col-12 text-truncate info__name">{{mail.from_name}}</h4>
-                    <p class="col-12 text-truncate info__email">--{{mail.from_email}}--</p> 
+                    <h4 class="col-12 text-truncate info__name">* {{mail.from_name}}{{mail.to_name}} *</h4>
+                    <p class="col-12 text-truncate info__email">--{{mail.from_email}}{{mail.to_email}}--</p> 
                 </div>
                 <p class="col-3 align-self-end info__date text-right">{{mail.date}}</p>
             </div>
             <div class="col-12 row mt-2 mb-1">
                 <h3 class="col-7">{{mail.subject}}</h3>
+                {% if incoming %}
                 <button  class="col-2 btn btn-outline-primary btn-sm mr-2" onclick={reply()}>CEVAPLA</button>
+                {% endif %}
                 <button  class="col-2 btn btn-outline-danger mr-2" onclick={reply()}>SİL</button>
             </div>
             <iframe class="col-12 border-0 mailDetail__frame container-fluid" 
@@ -27,10 +29,10 @@
                    
                 </div>
                 
-                <form class='row justify-content-center mb-2' action="/mails/reply-mail/{{mail.uid}}" method='POST'>
+                <form class='row justify-content-center mb-2' action="/mails/create/{{mail.uid}}" method='POST'>
                     {% csrf_token %}
                     <div class="col-12">
-                        <textarea name='reply' cols='80' rows="13" id='textarea_id'></textarea>
+                        <textarea name='reply' cols='80' rows="13" id='textarea_id' required> </textarea>
                     </div>
                     <input type='submit' class='btn btn-secondary btn-lg btn-block col-11 mt-2' value='REPLY' id='submit_id'>
                 </form>
