--- a/mails/templates/mails/outbox.html
+++ b/mails/templates/mails/outbox.html
@@ -6,28 +6,36 @@
     <div class="container-fluid mt-0" >
         <div class="container border-bottom border-info mb-2">
             <div class="row align-items-center mt-1 mb-1">
-                <input class='col-1 ' name='message-checkbox' type="checkbox" onclick="toggle(this)">
-                 <a href='a'><i class="fas fa-trash-alt "></i></a>
+                <input class='col-1 ' name='message_checkbox_outbox' type="checkbox" onclick="toggle(this)">
+                <button class="btn bg-translate " type='submit' name='outbox' form='nav-out_all-tab_form' id='delete_button'><i class="fas fa-trash-alt "></i></button>
             </div>
         </div>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-              <a class="nav-item nav-link active text-info" id="nav-out_all-tab" data-toggle="tab" href="#nav-out_all" role="tab" aria-controls="nav-out_all" aria-selected="true">Gönderilen Mesajlar</a>
-              <a class="nav-item nav-link text-warning" id="nav-my_out-tab" data-toggle="tab" href="#nav-my_out" role="tab" aria-controls="nav-my_out" aria-selected="false">Benim Gönderdiğim Mesajlarlar</a>
+              <a class="nav-item nav-link active text-info" id="nav-out_all-tab" data-toggle="tab" href="#nav-out_all" role="tab" aria-controls="nav-out_all" aria-selected="true" onclick="selectForm(this)">
+                Gönderilen Mesajlar</a>
+              <a class="nav-item nav-link text-warning" id="nav-my_out-tab" data-toggle="tab" href="#nav-my_out" role="tab" aria-controls="nav-my_out" aria-selected="false" onclick="selectForm(this)">
+                Benim Gönderdiğim Mesajlarlar</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-out_all" role="tabpanel" aria-labelledby="nav-out_all-tab">
-                <form>
+                <form action="{% url 'mails:delete' %}" method="POST" name='out' id='nav-out_all-tab_form'>
+                    {% csrf_token %}
                     {% for mail in outgoing_mails %}
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a  class='row' 
-                            href="/mails/detail-mail/{{mail.uid}}/")>
-                                <input class='col-1 list__checkbox' name='message-checkbox' type="checkbox">
-                                <p class="col-2 list__name">{{ mail.to_email}}</p>
-                                <p class="col-6 list__subject">{{ mail.subject}}</p>
-                                <p class="col-3 lis__date">{{ mail.date}}</p>
+                            <a  class='row text-info' 
+                            href="/mails/detail-mail/{{mail.0.uid}}/")>
+                                <input class='col-1 list__checkbox' name='message_checkbox_outbox' value="{{mail.0.uid}}" type="checkbox">
+                                <p class="col-2 list__name text-truncate">{{ mail.0.to_email}}</p>
+                                <p class="col-5 list__subject text-truncate text-truncate ">{{ mail.0.subject}}</p>
+                                <div class="col-3 d-flex" >
+                                    {% for person in mail.1 %}
+                                        <span>{{person.full_name}}</span>
+                                    {% endfor%}
+                                </div>
+                                <p class="col-1 lis__date">{{ mail.0.date}}</p>
                             </a>
                         </li>
                     </ul>    
@@ -35,17 +43,18 @@
                 </form>
             </div>
             <div class="tab-pane fade" id="nav-my_out" role="tabpanel" aria-labelledby="nav-my_out-tab">
-                <form>
-                    {% for mail in y %}
+                <form action="{% url 'mails:delete' %}" method="POST" name='out' id='nav-my_out-tab_form'>
+                    {% csrf_token %}
+                    {% for mail in my_outgoing_mails %}
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-                            <a  class='row' 
+                            <a  class='row text-warning' 
                             href="/mails/detail-mail/{{mail.0.uid}}/")>
-                                <input class='col-1 list__checkbox' name='message-checkbox' type="checkbox">
-                                <p class="col-2 list__name">{{ mail.0}}</p>
-                                <p class="col-5 list__subject">{{ mail.0.subject}}</p>
+                                <input class='col-1 list__checkbox' name='message_checkbox_outbox' value="{{mail.0.uid}}" type="checkbox">
+                                <p class="col-2 list__name text-truncate ">{{ mail.0.to_email}}</p>
+                                <p class="col-5 list__subject text-truncate ">{{ mail.0.subject}}</p>
                                 <div class="col-3 d-flex" >
-                                        {{mail.reply_persons}}
+                                       
                                     {% for person in mail.1 %}
                                         <span>{{person.full_name}}</span>
                                     {% endfor%}
@@ -60,8 +69,13 @@
         </div>
     </div>
     <script>
+  
+        const selectForm = (e)=>{
+            const btn = document.getElementById('delete_button');
+            btn.setAttribute('form',e.id+'_form');
+        };
         const toggle = (e)=>{
-            checkboxes = document.getElementsByName('message-checkbox');
+            checkboxes = document.getElementsByName('message_checkbox_outbox');
             for(let i = 0 ; i<checkboxes.length ; i++)
                 checkboxes[i].checked = e.checked;
            
