--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -11,11 +11,11 @@
     {% endblock %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel='stylesheet' href="{% static 'styl.css' %}">
+    <link rel='stylesheet' href="{% static 'style.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm ">         
-        <a href='/#' class="navbar-brand col-2">SambaPOS-MAIL</a>
+        <a href='/#' class="navbar-brand col-2 text-dark">SambaPOS-MAIL</a>
         {% if user.is_authenticated %}
         <input class="form-control mr-sm-2" type="search" placeholder="Ara...">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -35,14 +35,15 @@
     </nav>
     <div class="container-fluid  d-flex mt-0">
         {% if user.is_authenticated %}
-        <div class="container col-2 border">
+        <div class="container col-2 border main">
             <nav class='nav flex-column mt-2' >
-                <a class="nav-link" href="{% url 'mails:inbox' %}" >Gelen Kutusu</a><br>
-                <a class="nav-link" href="{% url 'mails:create'%}">Yeni Mail Oluştur </a>
+                <a class="nav-link text-dark" href="{% url 'mails:inbox' %}" >Gelen Mesajlar</a><br>
+                <a class="nav-link text-dark" href="{% url 'mails:outbox' %}" >Gönderilen Mesajlar</a><br>
+                <a class="nav-link text-dark" href="{% url 'mails:create'%}">Yeni Mesaj Oluştur </a>
             </nav>
         </div>
         {% endif %}
-        <div class="container col-10 border">
+        <div class="container col-10 border main ">
             {% block content %}
             {% endblock %}
         </div>
