--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -13,10 +13,16 @@
                     <input type="text" class="form-control" id="firstNameID" placeholder="Adınız..." name='firstName' required >
                 </div>
                 <div class="form-group">
-                    <label for="lastNameID">Adınız:</label>
+                    <label for="lastNameID">Soyadınız:</label>
                     <input type="text" class="form-control" id="lastNameID" placeholder="Soyadınız..." name='lastName' required>
                 </div>
-                <input class='form-control btn btn-secondary  btn-block mt-3' type='submit' value="Kaydet" >
+                <div class="form-group">
+                    <label for="lastNameID">Kullanıcı renginizi seçiniz...</label>
+                    <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select></div>
             </div>
 
         </form>
