--- a/mails/templates/mails/detail.html
+++ b/mails/templates/mails/detail.html
@@ -5,34 +5,38 @@
 {% block content %}
 
     <div class='mailDetail container'>
-        <div class="row">
+        <div class="row mt-4">
             <div class="row col-12">
                 <div class="col-9">
                     <h4 class="col-12 text-truncate info__name">* {{mail.from_name}}{{mail.to_name}} *</h4>
-                    <p class="col-12 text-truncate info__email">--{{mail.from_email}}{{mail.to_email}}--</p> 
+                    <p class="col-12 text-truncate info__email text-truncate">
+                        {% if incoming %}
+                        --{{mail.from_email}}--
+                        {% else %}
+                        --{{mail.to_email}}--
+                        {% endif %}
+                    </p> 
                 </div>
                 <p class="col-3 align-self-end info__date text-right">{{mail.date}}</p>
             </div>
             <div class="col-12 row mt-2 mb-1">
                 <h3 class="col-7">{{mail.subject}}</h3>
                 {% if incoming %}
-                <button  class="col-2 btn btn-outline-primary btn-sm mr-2" onclick={reply()}>CEVAPLA</button>
+                <button  class="col-2 btn btn-outline-success btn-sm mr-2" onclick={reply()}>CEVAPLA</button>
                 {% endif %}
                 <button  class="col-2 btn btn-outline-danger mr-2" onclick={reply()}>SİL</button>
             </div>
-            <iframe class="col-12 border-0 mailDetail__frame container-fluid" 
+            <iframe class="col-12 border mailDetail__frame container-fluid mt-4" 
                 srcdoc='{{mail.body_html}}'></iframe>
             <div class="reply_message bg-light mr-3 w-75" id='reply_id'>
                 <div class="row justify-content-end m-3 ">
                     <i class="fas fa-minus mr-3" onclick='min_reply(this)' id='icon_id'></i>
                     <i class="fas fa-times" onclick='close_reply(this)'></i>
-                   
                 </div>
-                
-                <form class='row justify-content-center mb-2' action="/mails/create/{{mail.uid}}" method='POST'>
+                <form class='row justify-content-center mb-2' action="/mails/create/{{mail.uid}}/{{reply}}/" method='POST'>
                     {% csrf_token %}
                     <div class="col-12">
-                        <textarea name='reply' cols='80' rows="13" id='textarea_id' required> </textarea>
+                        <textarea name='reply' cols='80' rows="13" id='textarea_id' class="h-100 w-100" required> </textarea>
                     </div>
                     <input type='submit' class='btn btn-secondary btn-lg btn-block col-11 mt-2' value='REPLY' id='submit_id'>
                 </form>
