--- a/assets/styl.css
+++ b/assets/styl.css
@@ -32,24 +32,11 @@ body{
     border:1px solid #555;
 }
 .main{
-    
-   
-   
-    
+      
     height: 90vh;
     overflow: auto;
     
 }
-
-
-
-
-
-
-
-
-
-
 
 .tempalte__message{
     height: 80vh;
@@ -69,3 +56,25 @@ body{
     right: 20px;
 }
 
+.list__name{
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 100%;
+    margin: auto 0;
+}
+.list__subject , .list__date{
+    font-size: 14px;    
+    line-height: 100%;
+    margin: auto 0;
+}
+.avatar_list{
+    height: 30px;
+    width: 30px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 30px;
+    margin: 0 5px;  
+}
+.tab__header{
+    font-size: 18px;
+}
