--- a/mails/templates/mails/inbox.html
+++ b/mails/templates/mails/inbox.html
@@ -6,22 +6,22 @@
     <div class="container-fluid mt-0" >
         <div class="container border-bottom border-info mb-2">
             <div class="row align-items-center mt-1 mb-1">
-                <input class='col-1 ' name='message_checkbox_inbox' type="checkbox" onclick="toggle(this)">
+                <input class='col-1 ' name='checkbox_inbox' type="checkbox" onclick="toggle(this)">
                 <button type="button" class="btn bg-translate" data-toggle="modal" data-target="#exampleModalScrollable">
                     <i class="fas fa-trash-alt "></i>
                 </button>
-                <button type="button" class="btn bg-translate" data-toggle="modal" data-target="#personList">
-                    list
+                {% if is_super_person %}
+                <button type="button" class="btn bg-translate" data-toggle="modal" data-target="#personList" onclick="forward(this)">
+                    <i class="fas fa-share"></i>
                 </button>
-                <button class="btn bg-translate " id='delete_btton' name='forward' type='submit' form='nav-all-tab_form'><i class="fas fa-trash-alt "></i></button>
-
+                {% endif %}
             </div>
         </div>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-              <a class="nav-item nav-link active text-info" id="nav-all-tab" data-toggle="tab" href="#nav-all" role="tab" aria-controls="nav-all" aria-selected="true" onclick="selectForm(this)" >Gelen Mesajlar</a>
-              <a class="nav-item nav-link text-warning" id="nav-unread-tab" data-toggle="tab" href="#nav-unread" role="tab" aria-controls="nav-unread" aria-selected="false" onclick="selectForm(this)" >Cevapladığım Mesajlarlar</a>
-              <a class="nav-item nav-link text-danger" id="nav-wait-tab" data-toggle="tab" href="#nav-wait" role="tab" aria-controls="nav-wait" aria-selected="false" onclick="selectForm(this)" >Cevap Bekleyen Mesajlar</a>
+              <a class="nav-item nav-link active text-info tab__header" id="nav-all-tab" data-toggle="tab" href="#nav-all" role="tab" aria-controls="nav-all" aria-selected="true" onclick="selectForm(this)" >Gelen Mesajlar</a>
+              <a class="nav-item nav-link text-warning tab__header" id="nav-unread-tab" data-toggle="tab" href="#nav-unread" role="tab" aria-controls="nav-unread" aria-selected="false" onclick="selectForm(this)" >Cevapladığım Mesajlarlar</a>
+              <a class="nav-item nav-link text-danger tab__header" id="nav-wait-tab" data-toggle="tab" href="#nav-wait" role="tab" aria-controls="nav-wait" aria-selected="false" onclick="selectForm(this)" >Cevap Bekleyen Mesajlar <span class="badge badge-danger ml-1">{{wait_to_reply.count}}</span></a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
@@ -31,20 +31,24 @@
                     <ul class="list-group list-group-flush">
                     {% for mail in all_incoming %}
                     
-                        <li class="list-group-item">
-                            <a  class='row text-info' 
-                            href="/mails/detail-mail/{{mail.0.uid}}/")>
-                                <input class='col-1 list__checkbox mt-2' name='message_checkbox_inbox' value="{{mail.0.uid}}" type="checkbox">
-                                <p class="col-2 list__name text-truncate">{{ mail.0.from_name}}</p>
+                        <li class="list-group-item p-0">
+                            <a  class='row text-info p-3'
+                            href="/mails/detail-mail/{{mail.0.uid}}/notReply")>
+                                <input class='col-1 list__checkbox m-auto' name='message_checkbox_inbox' value="{{mail.0.uid}}" type="checkbox">
+                                <p class="col-2 list__name text-truncate ">{{ mail.0.from_name}}</p>
                                 <p class="col-4 list__subject text-truncate text-truncate ">{{ mail.0.subject}}</p>
-                                <div class="col-3 d-flex" >
+                                <div class="col-3 d-flex " >
                                     {% for person in mail.1 %}
-                                        <p class='rounded-circle text-white p-2' style='background:{{person.personColor}};'>
+                                        <p class='rounded-circle text-white avatar_list ' 
+                                        style='background:{{person.personColor}};'
+                                        data-toggle="tooltip" title="{{person.full_name}}"
+                                        >
                                             {{person.avatar}}
                                         </p>
+                                        
                                     {% endfor%}
                                 </div>
-                                <p class="col-2 lis__date">{{ mail.0.date}}</p>
+                                <p class="col-2 list__date">{{ mail.0.date}}</p>
                             </a>
                         </li>
                     {% endfor %}
@@ -57,21 +61,21 @@
                     {% csrf_token %}
                     <ul class="list-group list-group-flush">
                     {% for mail in my_incoming %}
-                        <li class="list-group-item">
-                            <a  class='row text-warning' 
-                            href="/mails/detail-mail/{{mail.0.uid}}/")>
-                                <input class='col-1 list__checkbox mt-2' name='message_checkbox_inbox' value="{{mail.0.uid}}" type="checkbox">
+                        <li class="list-group-item p-0">
+                            <a  class='row text-warning p-3' 
+                            href="/mails/detail-mail/{{mail.0.uid}}/notReply")>
+                                <input class='col-1 list__checkbox mt-auto' name='message_checkbox_inbox' value="{{mail.0.uid}}" type="checkbox">
                                 <p class="col-2 list__name text-truncate ">{{ mail.0.from_name}}</p>
                                 <p class="col-4 list__subject text-truncate ">{{ mail.0.subject}}</p>
-                                <div class="col-3 d-flex" >
-
+                                <div class="col-3 d-flex m-0" >
                                     {% for person in mail.1 %}
-                                    <p class='rounded-circle text-white p-2' style='background:{{person.personColor}};'>
+                                    <p class='rounded-circle text-white avatar_list' 
+                                    style='background:{{person.personColor}};'>
                                         {{person.avatar}}
                                     </p>
                                     {% endfor%}
                                 </div>
-                                <p class="col-2 lis__date">{{ mail.0.date}}</p>
+                                <p class="col-2 list__date">{{ mail.0.date}}</p>
                             </a>
                         </li>
                     {% endfor %}
@@ -80,7 +84,32 @@
                 </form>
             </div>
             <div class="tab-pane fade" id="nav-wait" role="tabpanel" aria-labelledby="nav-wait-tab">
+                <form action="{% url 'mails:delete' %}" name='deneme' method="POST" id='nav-wait-tab_form'>
+                    {% csrf_token %}
+                    <ul class="list-group list-group-flush">
+                    {% for mail in wait_to_reply %}
+                        <li class="list-group-item p-0">
+                            <a  class='row text-danger p-3' 
+                            href="/mails/detail-mail/{{mail.uid}}/reply")>
+                                <input class='col-1 list__checkbox mt-auto' name='message_checkbox_inbox' value="{{mail.uid}}" type="checkbox">
+                                <p class="col-2 list__name text-truncate ">{{ mail.from_name}}</p>
+                                <p class="col-4 list__subject text-truncate ">{{ mail.subject}}</p>
+                                <div class="col-3 d-flex" >
 
+                                    {% for person in mail.1 %}
+                                    <p class='rounded-circle text-white avatar_list'
+                                     style='background:{{person.personColor}};'>
+                                        {{person.avatar}}
+                                    </p>
+                                    {% endfor%}
+                                </div>
+                                <p class="col-2 list__date">{{ mail.date}}</p>
+                            </a>
+                        </li>
+                    {% endfor %}
+                    </ul>    
+                    
+                </form>
             </div>
         </div>
         <div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
@@ -111,12 +140,12 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                    <form class="form-group" method='POST'></form>
+                    <form class="form-group" action="{% url 'mails:forward' %}" method='POST' id='forward_form'>
                     {% csrf_token %}
                         <ul class="list-group list-group-flush">
                             {% for person in all_persons %}
                             <li class="list-group-item d-flex ">
-                                <input type="checkbox" class='mt-2' aria-label="checkbox button for following text input">
+                                <input type="checkbox" class='mt-2' value='{{person.uid}}' name='person_checkbox'>
                                 <p class="text-dark ml-2" >{{person.full_name}}</p>
                             </li>
                             {% endfor %}
@@ -125,7 +154,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-outline-danger " id='delete_button' name='inbox' type='submit' form='nav-all-tab_form'>SİL</i></button>
+                    <button class="btn btn-outline-success " id='delete_button' name='inbox' type='submit' form='forward_form'>Yönlendir</i></button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal</button>
                 </div>
               </div>
@@ -133,17 +162,35 @@
         </div>
     </div>
     <script>
-         
+        const checkboxes = document.getElementsByName('message_checkbox_inbox');
         const selectForm = (e)=>{
             const btn = document.getElementById('delete_button');
             console.log(e.id)
             btn.setAttribute('form',e.id+'_form');
         };
         const toggle = (e)=>{
-            checkboxes = document.getElementsByName('message_checkbox_inbox');
             for(let i = 0 ; i<checkboxes.length ; i++)
-                checkboxes[i].checked = e.checked;
-           
+                checkboxes[i].checked = e.checked; 
         }
+
+        const forward = ()=>{
+            console.log(checkboxes)
+            const form_forward = document.getElementById('forward_form');
+            for(let i = 0; i < checkboxes.length; i++){
+                if(checkboxes[i].checked ){
+                    let item = document.createElement('input');
+                    item.setAttribute('type','hidden');
+                    item.setAttribute('name','message_checkbox');
+                    item.setAttribute('value',checkboxes[i].value);
+                    console.log(checkboxes[i])
+                    form_forward.appendChild(item);
+                }
+                
+            }
+            
+            
+            
+        };
+        
     </script>  
 {% endblock %}
