--- a/mails/templates/mails/template_message.html
+++ b/mails/templates/mails/template_message.html
@@ -7,22 +7,75 @@
     <style>
         .message{
             width: 100%;
-            height: 100vh;
-            border:3px solid rgb(241, 113, 53);
+            
+            border:1px solid rgb(241, 113, 53);
+            border-radius: 40px;
             background-color: #fff;
-            background-image: url('./sambaPOS.png');
+            background-image: url('https://raw.githubusercontent.com/RamazanOzdemir/sambapos/master/public/SambaPOS-Logo.png');
             background-repeat: no-repeat;
             background-position: center;
             
+        }
+        #to,#body{
+            margin: 15% 5% 10% 5%;
+            border: 1px solid chartreuse;
+        }
+        #name,#dept{
+            margin: 20% 5% 3% 40%;
+            border: 1px solid chartreuse;
+        }
+        #dept{
+            margin: 2% 5% 15% 40%;
+        }
+        header,footer{
+            height: 15vh;
+            width: 100%;
+            background: rgb(241, 113, 53);
+            border-radius: 40px 40px 0 0;
+        }
+        footer{
+            
+            bottom: 0;
+            left: 0;
+            border-radius:0 0 40px 40px ;
+            
+        }
+        @media (min-width: 720px){
+            #to,#body{margin: 8% 5% 10% 5%;}
+            #name,#dept{ margin: 8% 5% 1% 40%;}
+            #dept{margin: 1% 5% 15% 40%;}   
+            header,footer{height: 20vh;}      
         }
     </style>
 </head>
 <body>
     <div class="message">
-        <p id='to'>{{to}}</p>
-        <pre id='body'>{{body}}</pre>
-        <p id='name'>{{name}}</p>
-        
+        <header>
+        </header>
+        <div class="re">
+            <p id='to'>{{to}}</p>
+            <pre id='body'>{{body}}ldsjlsd,
+                asd
+                asd
+
+                sd
+                ad
+                sddddddddddd
+                ddddddd
+                dddddddddd
+                ddddddddddd
+                dddddddddd
+                ddddddddddd
+                dee
+                effffffff
+                ffffffffffff
+                fffffffff
+            </pre>
+            <p id='name'>{{name}}</p>
+            <p id='dept'>{{dpt}}</p>  
+        </div>
+
+        <footer></footer>
     </div>
   
 
